--- a/PDF_Conversion/PDF_Conversion.ipynb
+++ b/PDF_Conversion/PDF_Conversion.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "from langchain_community.document_loaders import PyPDFium2Loader\n",
     "\n",
-    "pdf_path =\"data/풍수해(1).pdf\"\n",
+    "pdf_path =\"data/test-data.pdf\"\n",
     "\n",
     "loader = PyPDFium2Loader(pdf_path)\n",
     "load = loader.load()"
